sass setup with mixins and foundation

--- a/src/styles/01-settings/presentation.scss
+++ b/src/styles/01-settings/presentation.scss
@@ -1,3 +1,14 @@
+// * RATIOS
+// ====================
+$ratios: (
+    16-by-9: 56.25%,
+    4-by-3: 75%,
+    1-by-2: 200%,
+    5-by-2:40%,
+    // 3-by-4: 67%,
+    gallery: 58%,
+);
+
 // * OVERLAYS
 // ====================
 $overlays: (
