--- a/src/styles/05-components/03-blocks/cookies-message.scss
+++ b/src/styles/05-components/03-blocks/cookies-message.scss
@@ -154,7 +154,7 @@ $cookie-message-button--active-background: get-colour(blue) !default;
 .cookies-message__submit{
     margin-top: ($base-spacing * 2);
     .button__text{
-        font-size: rem-calc(14);
+        font-size: calc-rems(14);
         min-width: 0;
         padding: 5px 15px;
     }
