--- a/src/styles/05-components/03-blocks/_forms.scss
+++ b/src/styles/05-components/03-blocks/_forms.scss
@@ -8,9 +8,9 @@ $form-row-background: transparent !default;
 
 $form-legend-color: get-colour(black) !default;
 
-$form-label-color: get-colour(text-alt) !default;
+$form-label-color: get-colour(text) !default;
 
-$form-input-color: get-colour(text-alt) !default;
+$form-input-color: get-colour(text) !default;
 $form-input-border-color: get-colour(grey-dark) !default;
 $form-input-background: transparent !default;
 $form-input-validation-icon-size: 48px !default;
