--- a/src/styles/01-settings/sizes.scss
+++ b/src/styles/01-settings/sizes.scss
@@ -1,3 +1,12 @@
+// * BREAKPOINTS
+// ====================
+$breakpoint-1: 460px !default;
+$breakpoint-2: 768px !default;
+$breakpoint-3: 1000px !default;
+$breakpoint-4: 1200px !default;
+$breakpoint-5: 1400px !default;
+$breakpoint-6: 1600px !default;
+$breakpoint-7: 1920px !default;
 
 // * ICONS
 // ====================
