--- a/src/styles/02-tools/presentation.scss
+++ b/src/styles/02-tools/presentation.scss
@@ -203,7 +203,7 @@
    
    @mixin link(
 	$font: copy,
-	$font-family: $font-roboto-light,
+	$font-family: $font-raleway-light,
 	$color: get-colour(link),
 	$border-width: 1px,
 	$border-style: solid,
