body copy styles

--- a/src/styles/01-settings/presentation.scss
+++ b/src/styles/01-settings/presentation.scss
@@ -24,5 +24,5 @@ $overlays: (
 $scrollbar-width: 8px !default;
 $scrollbar-border-radius: 8px !default;
 $scrollbar-track-colour: get-colour(grey-light) !default;
-$scrollbar-bar-colour: get-colour(charcoal) !default;
+$scrollbar-bar-colour: get-colour(blue-dark) !default;
 $scrollbar-other-colour: get-colour(grey-light) !default;
