--- a/src/styles/02-tools/animations.scss
+++ b/src/styles/02-tools/animations.scss
@@ -106,7 +106,7 @@
         background-color: get-colour(blue);
     }
     75% {
-        background-color: get-colour(charcoal);
+        background-color: get-colour(blue-dark);
     }
     100% {
         background-color: get-colour(blue);
