--- a/src/styles/03-elements/base.scss
+++ b/src/styles/03-elements/base.scss
@@ -32,7 +32,7 @@
         color: get-colour(text);
         @include typography();
         font-family: $font-default;
-        font-weight: 300;
+        font-weight: 400;
         word-wrap: break-word; // 5.
         -webkit-font-smoothing: antialiased; // 6.
         text-rendering: optimizeLegibility;
@@ -66,7 +66,7 @@
 
 
     h1, h2, h3, h4, h5, h6, p {
-        font-weight: 300;
+        font-weight: normal;
         margin: 0; // 7.
     }
 }
