--- a/src/styles/03-elements/base.scss
+++ b/src/styles/03-elements/base.scss
@@ -29,7 +29,7 @@
     }
 
     body {
-        color: get-colour(text);
+        color: get-var(text);
         @include typography();
         font-family: $font-default;
         font-weight: 400;
