spacing and font sizing updates

--- a/src/styles/03-elements/base.scss
+++ b/src/styles/03-elements/base.scss
@@ -33,6 +33,7 @@
         @include typography();
         font-family: $font-default;
         font-weight: 400;
+        letter-spacing: 0.5px;
         word-wrap: break-word; // 5.
         -webkit-font-smoothing: antialiased; // 6.
         text-rendering: optimizeLegibility;
