--- a/src/styles/07-utilities/colors.scss
+++ b/src/styles/07-utilities/colors.scss
@@ -7,10 +7,16 @@
   }
 
   /* For each key in the map, created an own class */
-  @each $colour, $value in $brand-colors {
-      .scheme--#{$colour} {
-        background-color: get-var($colour) !important;
-      }
-  }
+  // @each $colour, $value in $brand-colors {
+  //     .scheme--#{$colour} {
+  //       background-color: get-var($colour) !important;
+  //     }
+  // }
 
+  @each $s-group, $s-colors in $scheme-colors{
+    .scheme--#{$s-group} {
+      background-color: map-get($s-colors, background) !important;
+      color: map-get($s-colors, color) !important;
+    }
+  }
 }
