spacing adjustments colours using variables

--- a/src/styles/01-settings/colors.scss
+++ b/src/styles/01-settings/colors.scss
@@ -1,3 +1,7 @@
+@function get-var($var) {
+    @return var(--#{$var});
+}
+
 // * BRAND COLORS
 // ====================
 $brand-colors: (
@@ -30,19 +34,10 @@ $text-colors: (
 
 
 $scheme-colors:(
-    'blue' : (
-        // background: #{get-var(blue)},
-        // color: #{get-var(white)}
-        'background': map-get($brand-colors, blue),
-        'color': map-get($brand-colors, white)
-    ),
-    'blue-dark' : (
-        // background: #{get-var(blue)},
-        // color: #{get-var(white)}
-        'background': map-get($brand-colors, blue-dark),
-        'color': map-get($brand-colors, white)
-    ),
-);
+    blue: #{get-var(white)},
+    blue-dark:  #{get-var(white)},
+    grey:  #{get-var(black)},
+) !default;
 
 $site-colors: map-merge($brand-colors, $text-colors);
 
