--- a/src/styles/01-settings/typography.scss
+++ b/src/styles/01-settings/typography.scss
@@ -21,17 +21,17 @@ $base-font-size--px: 16 !default;
 $font-size-groups: (
     'heading1' : (
       null: rem-calc(56),
-      #{$breakpoint-2}: rem-calc(82),
-      #{$breakpoint-4}: rem-calc(86),
+      screen768: rem-calc(82),
+      screen1200: rem-calc(86),
     ),
     'heading2' : (
       null: rem-calc(42),
-      #{$breakpoint-2}: rem-calc(60),
-      #{$breakpoint-4}: rem-calc(80),
+      screen768: rem-calc(60),
+      screen1200: rem-calc(80),
     ),
     'heading3' : (
       null: rem-calc(32),
-      #{$breakpoint-2}: rem-calc(40),
+      screen768: rem-calc(40),
     ),
     'title1' : (
       null: rem-calc(24),
@@ -41,8 +41,8 @@ $font-size-groups: (
     ),
     'copyLarge' : (
       null: rem-calc(18),
-      #{$breakpoint-2}: rem-calc(20),
-      #{$breakpoint-4}: rem-calc(34),
+      screen768: rem-calc(20),
+      screen1200: rem-calc(34),
     ),
     'copy' : (
       null: rem-calc(16),
