--- a/src/styles/01-settings/presentation.scss
+++ b/src/styles/01-settings/presentation.scss
@@ -23,6 +23,6 @@ $overlays: (
 // ====================
 $scrollbar-width: 8px !default;
 $scrollbar-border-radius: 8px !default;
-$scrollbar-track-colour: get-colour(grey-light) !default;
-$scrollbar-bar-colour: get-colour(blue-dark) !default;
-$scrollbar-other-colour: get-colour(grey-light) !default;
+$scrollbar-track-colour: get-colour(brand-grey-light) !default;
+$scrollbar-bar-colour: get-colour(brand-blue-dark) !default;
+$scrollbar-other-colour: get-colour(brand-grey-light) !default;
