header component and initial spacing layout

--- a/src/styles/01-settings/spacing.scss
+++ b/src/styles/01-settings/spacing.scss
@@ -40,4 +40,5 @@ $spacing-groups:(
 
 // * HEADER
 // ====================
-$header-height: 108px !default;
+$header-offset: ($base-spacing * 8) !default;
+$header-offset--768: percentage(1/$grid-columns) !default;
