--- a/src/styles/07-utilities/spacing.scss
+++ b/src/styles/07-utilities/spacing.scss
@@ -22,6 +22,6 @@
     // * Elements that get hidden by the header and require extra padding-top
     // *
     .u-header-offset{
-        @include heading-offset();
+        @include header-offset();
     }
 }
