--- a/src/styles/02-tools/spacing.scss
+++ b/src/styles/02-tools/spacing.scss
@@ -46,7 +46,7 @@
 	padding-top: $header-offset !important;
 
 	@include breakpoint(screen768){
-		padding-top: 0;
+		padding-top: 0 !important;
 		margin-left: $header-offset--768 !important;
 	}
 }
