--- a/src/styles/05-components/03-blocks/header.scss
+++ b/src/styles/05-components/03-blocks/header.scss
@@ -1,24 +1,173 @@
 @mixin relashe-components-blocks-header {
+    // * Variables
+    // ====================
+    $header-nav-button-height: 16px !default;
+    $header-nav-button-width: 32px !default;
+    $header-nav-button-color: currentColor !default;
+
+    $header-nav-menu-close: background-color 150ms ease-in 50ms !default;
+    $header-nav-menu-open: 0ms background-color ease-in 0ms !default; // nav slide in speed should be the delay
+
+    $header-background--menu-open: get-colour(brand-blue-light) !default;
+    $header-color--menu-open: get-colour(brand-white)!default;
+
+    $header-background--page-background: transparent !default;
+    $header-color--page-background: get-colour(brand-white)!default;
+
     .header{
-        background-color: get-var(brand-blue-dark);
+        --header-height: #{$header-offset};
+        --header-width: 100%;
+        --header-background: get-var(brand-blue-dark);
+        --header-color: get-var(text);
+        --header-nav-button-height: 16px;
+        --header-nav-button-width: 32px;
+        --header-nav-button-color: currentColor;
+
+        background-color: get-var(header-background);
         position: fixed;
         top: 0;
         bottom: 0;
         left: 0;
-        height: $header-offset;
-        width: 100%;
+        height: get-var(header-height);
+        width: get-var(header-width);
     }
     
     .header__inner{
         width: 100%;
         height: 100%;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
     }
 
+    .header__controls{
+        display: inline-flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: center;
+        flex: 0 0 $header-nav-button-width;
+        padding: get-var(header-nav-button-width);
+    }
+
+    // **
+    // * Nav Button
+    // *
+    .header-nav-button{
+        color: get-var(header-nav-button-color);
+        cursor: pointer;
+        flex: 0 0 get-var(header-nav-button-width);
+        position: relative;
+        height: get-var(header-nav-button-height);
+        width: get-var(header-nav-button-width);
+        outline: none;
+
+        &:before,
+        &:after {
+            content: '';
+            background-color: get-var(header-nav-button-color);
+            display: inline-block;
+            vertical-align: middle;
+            height: 2px;
+            width: get-var(header-nav-button-width);
+            position: absolute;
+            left: 0;
+            transition: all 350ms cubic-bezier(0.55, 0.055, 0.675, 0.19);   // this is the transition when closing or hovering out         
+        }
+
+        &:before {
+            transform-origin: 50% 50%;
+            bottom: 100%;
+        }
+
+        &:after {
+            transform-origin: 50% 50%;
+            top: 100%;
+        }
+
+        // hover/focus, when closed
+        &:hover,
+        &:focus{
+            &:before,
+            &:after{
+                transition: all 350ms cubic-bezier(0.23, 1, 0.32, 1);            
+            }
+
+            &:before {
+                transform: translateY(-100%);
+            }
+        
+            &:after {
+                transform: translateY(100%);
+            }
+        }
+    }
+
+    // * States & Modifiers
+    // ====================
+
+    // .html--menu-open,
+    // .html--menu-open.html--background-image{
+    //     .header{
+    //         background-color: $header-background--menu-open; 
+    //         color: $header-color--menu-open;
+    //         transition: 
+    //             $header-nav-animation-down,
+    //             $header-nav-menu-open;
+
+        
+    //         .header-nav-button{
+    //             &:before,
+    //             &:after {
+    //                 background-color: $header-color--menu-open;
+    //             }
+    //         }
+
+    //         &.header--out-viewport{
+    //             transform: translateY(0);
+    //             transition: 
+    //                 $header-nav-animation-up,
+    //                 $header-nav-menu-open;
+    //         }
+
+    //     }
+    // }
+
+    .header-nav-button{
+        &[aria-pressed="true"]{
+            &:before,
+            &:after{
+                transition: all 350ms ease-in;            
+            }
+
+            &:before {
+                bottom: 50%;
+                transform: rotate(45deg) translateY(50%);
+            }
+
+            &:after {
+                top: 50%;
+                transform: rotate(-45deg) translateY(-50%);
+            }
+        }
+    }
+
+    // * Media Queries
+    // ====================
     @include breakpoint(screen768){
         .header{
-            @include grid-column(1);
+            --header-height: 100%;
+            --header-width: #{$header-offset--768};
+
+            @include grid-column(1, 0);
+
             background-color: transparent;
-            height: 100%;
+            border-right: 1px solid rgba(0,0,0,.08);
+        }
+
+        .header__controls{
+            border-top: 1px solid rgba(0,0,0,.08);
         }
     }
 }
