header spacing update and bigger screen size page content layout based on header

--- a/src/styles/05-components/03-blocks/header.scss
+++ b/src/styles/05-components/03-blocks/header.scss
@@ -3,24 +3,18 @@
     // ====================
     $header-nav-button-height: 16px !default;
     $header-nav-button-width: 32px !default;
-    $header-nav-button-color: currentColor !default;
 
     $header-nav-menu-close: background-color 150ms ease-in 50ms !default;
     $header-nav-menu-open: 0ms background-color ease-in 0ms !default; // nav slide in speed should be the delay
 
-    $header-background--menu-open: get-colour(brand-blue-light) !default;
-    $header-color--menu-open: get-colour(brand-white)!default;
-
-    $header-background--page-background: transparent !default;
-    $header-color--page-background: get-colour(brand-white)!default;
-
     .header{
         --header-height: #{$header-offset};
         --header-width: 100%;
-        --header-background: get-var(brand-blue-dark);
-        --header-color: get-var(text);
-        --header-nav-button-height: 16px;
-        --header-nav-button-width: 32px;
+        --header-background: #{get-var(brand-blue-dark)};
+        --header-color: #{get-var(text)};
+        --header-nav-button-height: #{$header-nav-button-height};
+        --header-nav-button-width: #{$header-nav-button-width};
+        --header-nav-button-padding: #{$header-nav-button-width};
         --header-nav-button-color: currentColor;
 
         background-color: get-var(header-background);
@@ -30,25 +24,28 @@
         left: 0;
         height: get-var(header-height);
         width: get-var(header-width);
+        z-index: layer(header);
     }
     
     .header__inner{
-        width: 100%;
-        height: 100%;
         display: flex;
         flex-flow: column nowrap;
         justify-content: space-between;
         align-items: center;
         position: relative;
+        height: 100%;
+        width: 100%;
     }
 
-    .header__controls{
+    .header__menu-button{
         display: inline-flex;
         flex-flow: row nowrap;
         justify-content: space-between;
         align-items: center;
         flex: 0 0 $header-nav-button-width;
-        padding: get-var(header-nav-button-width);
+        outline: none;
+        padding: get-var(header-nav-button-padding);
+        width: 100%;
     }
 
     // **
@@ -61,7 +58,6 @@
         position: relative;
         height: get-var(header-nav-button-height);
         width: get-var(header-nav-button-width);
-        outline: none;
 
         &:before,
         &:after {
@@ -73,7 +69,7 @@
             width: get-var(header-nav-button-width);
             position: absolute;
             left: 0;
-            transition: all 350ms cubic-bezier(0.55, 0.055, 0.675, 0.19);   // this is the transition when closing or hovering out         
+            transition: all 350ms cubic-bezier(0.55, 0.055, 0.675, 0.19);     
         }
 
         &:before {
@@ -86,7 +82,6 @@
             top: 100%;
         }
 
-        // hover/focus, when closed
         &:hover,
         &:focus{
             &:before,
@@ -106,68 +101,49 @@
 
     // * States & Modifiers
     // ====================
-
-    // .html--menu-open,
-    // .html--menu-open.html--background-image{
-    //     .header{
-    //         background-color: $header-background--menu-open; 
-    //         color: $header-color--menu-open;
-    //         transition: 
-    //             $header-nav-animation-down,
-    //             $header-nav-menu-open;
-
-        
-    //         .header-nav-button{
-    //             &:before,
-    //             &:after {
-    //                 background-color: $header-color--menu-open;
-    //             }
-    //         }
-
-    //         &.header--out-viewport{
-    //             transform: translateY(0);
-    //             transition: 
-    //                 $header-nav-animation-up,
-    //                 $header-nav-menu-open;
-    //         }
-
-    //     }
-    // }
-
-    .header-nav-button{
+    .header__menu-button{
         &[aria-pressed="true"]{
-            &:before,
-            &:after{
-                transition: all 350ms ease-in;            
-            }
+            .header-nav-button{
+                &:before,
+                &:after{
+                    transition: all 350ms ease-in;            
+                }
 
-            &:before {
-                bottom: 50%;
-                transform: rotate(45deg) translateY(50%);
-            }
+                &:before {
+                    bottom: 50%;
+                    transform: rotate(45deg) translateY(50%);
+                }
 
-            &:after {
-                top: 50%;
-                transform: rotate(-45deg) translateY(-50%);
+                &:after {
+                    top: 50%;
+                    transform: rotate(-45deg) translateY(-50%);
+                }
             }
         }
     }
 
     // * Media Queries
     // ====================
-    @include breakpoint(screen768){
+    @include breakpoint(screen1000){
         .header{
             --header-height: 100%;
-            --header-width: #{$header-offset--768};
+            --header-width: #{$header-offset--1000};
+            --header-background: transparent;
 
             @include grid-column(1, 0);
 
-            background-color: transparent;
             border-right: 1px solid rgba(0,0,0,.08);
         }
 
-        .header__controls{
-            border-top: 1px solid rgba(0,0,0,.08);
+        .header__menu-button{
+            justify-content: center;
+        }
+    }
+
+    @include breakpoint(screen1400){
+        .header{
+            --header-nav-button-width: #{$header-nav-button-width * 1.2};
+            --header-nav-button-padding: #{$header-nav-button-width * 1.5};
         }
     }
 }
