--- a/src/styles/04-layouts/page.scss
+++ b/src/styles/04-layouts/page.scss
@@ -28,7 +28,7 @@
     }
 
     .page-content{
-        @include header-offset();
+        // @include header-offset();
         opacity: 0;
         transition: opacity 250ms linear;
     }
